🐞 fix: drawer on iOS

--- a/style/drawer/default.css
+++ b/style/drawer/default.css
@@ -1,7 +1,3 @@
-:root {
-    --ringo-close: url("data: image/svg+xml, %3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' stroke-width='2' stroke='rgb(114, 118, 123)' fill='none' stroke-linecap='round' stroke-linejoin='round' %3E%3Cpath stroke='none' d='M0 0h24v24H0z' fill='none' /%3E%3Cline x1='18' y1='6' x2='6' y2='18' /%3E%3Cline x1='6' y1='6' x2='18' y2='18' /%3E%3C/svg%3E");
-}
-
 .ringo-drawer {
     box-sizing: border-box;
     background-color: inherit;
@@ -11,7 +7,7 @@
 
 @media (prefers-color-scheme: dark) {
     .ringo-drawer {
-        border: 1px #30363d solid;
+        border: none;
     }
 }
 
@@ -27,7 +23,7 @@
 }
 
 .ringo-drawer-close {
-    background: var(--ringo-close);
+    background: url("data: image/svg+xml, %3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' stroke-width='2' stroke='rgb(114, 118, 123)' fill='none' stroke-linecap='round' stroke-linejoin='round' %3E%3Cpath stroke='none' d='M0 0h24v24H0z' fill='none' /%3E%3Cline x1='18' y1='6' x2='6' y2='18' /%3E%3Cline x1='6' y1='6' x2='18' y2='18' /%3E%3C/svg%3E");
     display: block;
     width: 24px;
     height: 24px;
